hphp/test/slow/reflection/lambda_uninit_capture.php.expectf
bool(true)

Fatal error: Uncaught exception 'UndefinedVariableException' with message 'Undefined variable: x' in %s/lambda_uninit_capture.php:5
Stack trace:
%A
